==> Hisyamfaiz/F103RG_BMS10S13P/Core/Src/LTC68042.c <==
#include <stdio.h>
#include <string.h>
#include "LTC68042.h"
#include "math.h"
#include "main.h"
#include "stdlib.h"

void LTC6804_adcv()
{

	uint8_t cmd[4];
	uint16_t temp_pec;

	//1
	cmd[0] = ADCV[0];
	cmd[1] = ADCV[1];

	//2
	temp_pec = pec15_calc(2, ADCV);
	cmd[2] = (uint8_t)(temp_pec >> 8);
	cmd[3] = (uint8_t)(temp_pec);

	//3
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake. This command can be removed.

	//4
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	spi_write_array(4,cmd);
	ltc6804_CS_SET(ltc6804_CS_PIN);

}

void LTC6804_adax()
{
	uint8_t cmd[4];
	uint16_t temp_pec;

	cmd[0] = ADAX[0];
	cmd[1] = ADAX[1];
	temp_pec = pec15_calc(2, ADAX);
	cmd[2] = (uint8_t)(temp_pec >> 8);
	cmd[3] = (uint8_t)(temp_pec);

	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake. This command can be removed.
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	spi_write_array(4,cmd);
	ltc6804_CS_SET(ltc6804_CS_PIN);

}

void LTC6804_rdcv_reg(uint8_t reg,
		uint8_t total_ic,
		uint8_t *data
)
{
	uint8_t cmd[4];
	uint16_t temp_pec;

	//1
	if (reg == 1)
	{
		cmd[1] = 0x04;
		cmd[0] = 0x00;
	}
	else if (reg == 2)
	{
		cmd[1] = 0x06;
		cmd[0] = 0x00;
	}
	else if (reg == 3)
	{
		cmd[1] = 0x08;
		cmd[0] = 0x00;
	}
	else if (reg == 4)
	{
		cmd[1] = 0x0A;
		cmd[0] = 0x00;
	}

	//2


	//3
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake. This command can be removed.

	//4
	for (int current_ic = 0; current_ic<total_ic; current_ic++)
	{
		cmd[0] = 0x80 + (current_ic<<3); //Setting address
		temp_pec = pec15_calc(2, cmd);
		cmd[2] = (uint8_t)(temp_pec >> 8);
		cmd[3] = (uint8_t)(temp_pec);
		ltc6804_CS_RESET(ltc6804_CS_PIN);
		spi_write_read(cmd,4,&data[current_ic*8],8);
		ltc6804_CS_SET(ltc6804_CS_PIN);
	}
}

void LTC6804_rdaux_reg(uint8_t reg,
		uint8_t total_ic,
		uint8_t *data
)
{
	uint8_t cmd[4];
	uint16_t cmd_pec;

	//1
	if (reg == 1)
	{
		cmd[1] = 0x0C;
		cmd[0] = 0x00;
	}
	else if (reg == 2)
	{
		cmd[1] = 0x0e;
		cmd[0] = 0x00;
	}
	else
	{
		cmd[1] = 0x0C;
		cmd[0] = 0x00;
	}
	//2
	cmd_pec = pec15_calc(2, cmd);
	cmd[2] = (uint8_t)(cmd_pec >> 8);
	cmd[3] = (uint8_t)(cmd_pec);

	//3
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake, this command can be removed.
	//4
	for (int current_ic = 0; current_ic<total_ic; current_ic++)
	{
		cmd[0] = 0x80 + (current_ic<<3); //Setting address
		cmd_pec = pec15_calc(2, cmd);
		cmd[2] = (uint8_t)(cmd_pec >> 8);
		cmd[3] = (uint8_t)(cmd_pec);
		ltc6804_CS_RESET(ltc6804_CS_PIN);
		spi_write_read(cmd,4,&data[current_ic*8],8);
		ltc6804_CS_SET(ltc6804_CS_PIN);
	}
}

void LTC6804_clrcell()
{
	uint8_t cmd[4];
	uint16_t cmd_pec;

	//1
	cmd[0] = 0x07;
	cmd[1] = 0x11;

	//2
	cmd_pec = pec15_calc(2, cmd);
	cmd[2] = (uint8_t)(cmd_pec >> 8);
	cmd[3] = (uint8_t)(cmd_pec );

	//3
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake. This command can be removed.

	//4
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	spi_write_read(cmd,4,0,0);
	ltc6804_CS_SET(ltc6804_CS_PIN);
}

void LTC6804_clraux()
{
	uint8_t cmd[4];
	uint16_t cmd_pec;

	//1
	cmd[0] = 0x07;
	cmd[1] = 0x12;

	//2
	cmd_pec = pec15_calc(2, cmd);
	cmd[2] = (uint8_t)(cmd_pec >> 8);
	cmd[3] = (uint8_t)(cmd_pec);

	//3
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake.This command can be removed.
	//4
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	spi_write_read(cmd,4,0,0);
	ltc6804_CS_SET(ltc6804_CS_PIN);
}

void LTC6804_wrcfg(uint8_t total_ic,uint8_t config[][6])
{
	const uint8_t BYTES_IN_REG = 6;
	const uint8_t CMD_LEN = 4+(8*total_ic);
	uint8_t *cmd;
	uint16_t temp_pec;
	uint8_t cmd_index; //command counter

	cmd = (uint8_t *)malloc(CMD_LEN*sizeof(uint8_t));
	//1
	cmd[0] = 0x00;
	cmd[1] = 0x01;
	cmd[2] = 0x3d;
	cmd[3] = 0x6e;

	//2
	cmd_index = 4;
	for (uint8_t current_ic = 0; current_ic < total_ic ; current_ic++)       // executes for each LTC6804 in stack,
	{
		for (uint8_t current_byte = 0; current_byte < BYTES_IN_REG; current_byte++) // executes for each byte in the CFGR register
		{
			// i is the byte counter

			cmd[cmd_index] = config[current_ic][current_byte];    //adding the config data to the array to be sent
			cmd_index = cmd_index + 1;
		}
		//3
		temp_pec = (uint16_t)pec15_calc(BYTES_IN_REG, &config[current_ic][0]);// calculating the PEC for each board
		cmd[cmd_index] = (uint8_t)(temp_pec >> 8);
		cmd[cmd_index + 1] = (uint8_t)temp_pec;
		cmd_index = cmd_index + 2;
	}

	//4
	wakeup_idle ();                                //This will guarantee that the LTC6804 isoSPI port is awake.This command can be removed.
	//5
	for (int current_ic = 0; current_ic<total_ic; current_ic++)
	{
		cmd[0] = 0x80 + (current_ic<<3); //Setting address
		temp_pec = pec15_calc(2, cmd);
		cmd[2] = (uint8_t)(temp_pec >> 8);
		cmd[3] = (uint8_t)(temp_pec);
		ltc6804_CS_RESET(ltc6804_CS_PIN);
		spi_write_array(4,cmd);
		spi_write_array(8,&cmd[4+(8*current_ic)]);
		ltc6804_CS_SET(ltc6804_CS_PIN);
	}
	free(cmd);
}

int8_t LTC6804_rdcfg(uint8_t total_ic, uint8_t r_config[][8])
{
	const uint8_t BYTES_IN_REG = 8;

	uint8_t cmd[4];
	uint8_t *rx_data;
	int8_t pec_error = 0;
	uint16_t data_pec;
	uint16_t received_pec;
	rx_data = (uint8_t *) malloc((8*total_ic)*sizeof(uint8_t));
	//1
	cmd[0] = 0x00;
	cmd[1] = 0x02;
	cmd[2] = 0x2b;
	cmd[3] = 0x0A;

	//2
	wakeup_idle (); //This will guarantee that the LTC6804 isoSPI port is awake. This command can be removed.
	//3
	for (int current_ic = 0; current_ic<total_ic; current_ic++)
	{
		cmd[0] = 0x80 + (current_ic<<3); //Setting address
		data_pec = pec15_calc(2, cmd);
		cmd[2] = (uint8_t)(data_pec >> 8);
		cmd[3] = (uint8_t)(data_pec);
		ltc6804_CS_RESET(ltc6804_CS_PIN);
		spi_write_read(cmd,4,&rx_data[current_ic*8],8);
		ltc6804_CS_SET(ltc6804_CS_PIN);
	}

	for (uint8_t current_ic = 0; current_ic < total_ic; current_ic++) //executes for each LTC6804 in the stack
	{
		//4.a
		for (uint8_t current_byte = 0; current_byte < BYTES_IN_REG; current_byte++)
		{
			r_config[current_ic][current_byte] = rx_data[current_byte + (current_ic*BYTES_IN_REG)];
		}
		//4.b
		received_pec = (r_config[current_ic][6]<<8) + r_config[current_ic][7];
		data_pec = pec15_calc(6, &r_config[current_ic][0]);
		if (received_pec != data_pec)
		{
			pec_error = -1;
		}
	}
	free(rx_data);
	//5
	return(pec_error);
}

void wakeup_idle()
{
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	HAL_Delay(1); //Guarantees the isoSPI will be in ready mode
	ltc6804_CS_SET(ltc6804_CS_PIN);
}

void wakeup_sleep()
{
	ltc6804_CS_RESET(ltc6804_CS_PIN);
	HAL_Delay(1); // Guarantees the LTC6804 will be in standby
	ltc6804_CS_SET(ltc6804_CS_PIN);
}

void spi_write_read(uint8_t tx_Data[],//array of data to be written on SPI port
		uint8_t tx_len, //length of the tx data arry
		uint8_t *rx_data,//Input: array that will store the data read by the SPI port
		uint8_t rx_len //Option: number of bytes to be read from the SPI port
)
{
	for (uint8_t i = 0; i < tx_len; i++)
	{
		ltc6804_Write8(tx_Data[i]);

	}

	for (uint8_t i = 0; i < rx_len; i++)
	{
		rx_data[i] = (uint8_t)ltc6804_Read8(0xFF);
	}

}
